--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Curtis Moody's Portfolio</title>
 </head>
 <body>
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Varela+Round" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Varela+Round" />
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <style>
