--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Curtis Moody's Portfolio</title>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Varela+Round" />
 </head>
 <body>
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Varela+Round" />
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <style>
     body { 
          background-color: #7D939C;
@@ -146,7 +146,7 @@
                          <h2 class="title">Latest Projects</h2>
                          <div class="row project">
                               <div class="col-md-4 opac-hover">
-                                   <a href="https://github.com/CZMoodyDev/Meal-Planner" target="_blank"><img class="img-responsive" src="http://i.imgur.com/6VGs047.jpg"></a>
+                                   <a href="https://github.com/CZMoodyDev/Meal-Planner" target="_blank"><img class="img-responsive" src="https://i.imgur.com/6VGs047.jpg"></a>
                               </div>
                               <div class="col-md-8">
                                    <h3 class="project-flush project-name">Meal-Planner</h3>
@@ -161,7 +161,7 @@ Check it out on GitHub</a>
                          </div>
                          <div class="row project">
                               <div class="col-md-4 opac-hover">
-                                   <a href="https://github.com/CZMoodyDev/DesktopDungeonBot" target="_blank"><img class="img-responsive" src="http://i.imgur.com/PHk3fBW.jpg"></a>
+                                   <a href="https://github.com/CZMoodyDev/DesktopDungeonBot" target="_blank"><img class="img-responsive" src="https://i.imgur.com/PHk3fBW.jpg"></a>
                               </div>
                               <div class="col-md-8">
                                    <h3 class="project-flush project-name">DesktopDungeonBot</h3>
