--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Varela+Round" />
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+<link href="./css/font-awesome-4.7.0/css/font-awesome.min" rel="stylesheet">
 <style>
     body { 
          background-color: #7D939C;
