--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 </style>
 <nav id="nav-bar" class="navbar navbar-default navbar-static-top">
      <div class="container-fluid">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
                <li><a href="#about">About</a></li>
                <li><a href="#projects">Projects</a></li>
@@ -114,6 +115,7 @@
                <li><a href="#skills">Skills</a></li>
                <li><a href="#contact">Contact</a></li> 
           </ul>
+        </div>
      </div>
 </nav>
 <div class="container-fluid">
@@ -181,7 +183,7 @@ Steam Page for DesktopDungeons</a>
                          <h2 class="title">Other Projects</h2>
                          <div>
                               <h3 class="project-name">OpenDental Business Reporting Module</h3>
-                              <p>I worked in a team of 6 other students to create a reporting module for the business side of dental practices including patient absence metrics and appointment data.</p>
+                              <p>I worked in a team with 6 other students to create a reporting module for the business side of dental practices including patient absence metrics and appointment data.</p>
                               <ul class="list-inline">
                                    <li><span class="label label-primary">Open Source</span></li>
                                    <li><span class="label label-primary">C# Software</span></li>
@@ -190,7 +192,7 @@ Steam Page for DesktopDungeons</a>
                          </div>
                          <div>
                               <h3 class="project-name">ScreenCaster</h3>
-                              <p>Instead of paying for professional screen capture programs or using free but malware bloated ones, I made my own instead. I eventually want to turn it into a more capable piece of software for my own use, but for now it does the job it is needed to do.</p>
+                              <p>Instead of paying for professional screen capture programs or using free but malware bloated ones, I made my own. I eventually want to turn it into a more capable piece of software for my own use, but for now it does the job it is needed to do.</p>
                               <ul class="list-inline">
                                    <li><span class="label label-primary">Python Application</span></li>
                                    <li><span class="label label-primary">Video Imaging</span></li>
