Added button for navbar

--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
 </style>
 <nav id="nav-bar" class="navbar navbar-default navbar-static-top">
      <div class="container-fluid">
-        <div class="collapse navbar-collapse">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
                <li><a href="#about">About</a></li>
                <li><a href="#projects">Projects</a></li>
@@ -142,7 +147,7 @@
                <div class="main">
                     <div id="about" class="info-block">
                          <h2 class="title">About Me</h2>
-                         <p>Hi, my name is Curtis. I enjoy developing for both sides of the technical stack both professionally and liesurely. I like to game in my free time (the nerdier, the better) and build in-house tools to make my life easier. I have a Bachelor of Computer Science and a Bachelor of Arts with a major in English so I like to drill down on problems using those two schools of knowledge. I like the middle seat on planes because it makes me feel safer and my favourite food is pizza.</p>
+                         <p>Hi, my name is Curtis. I enjoy developing for both sides of the technical stack professionally and liesurely. I like to game in my free time (the nerdier, the better) and build in-house tools to make my life easier. I have a Bachelor of Computer Science and a Bachelor of Arts with a major in English so I like to drill down on problems using those two schools of knowledge. I like the middle seat on planes because it makes me feel safer and my favourite food is pizza.</p>
                     </div>
                     <div id="projects" class="info-block">
                          <h2 class="title">Latest Projects</h2>
