Navbar fix with menu

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
          color: #22425A;
     }
 </style>
-<nav id="nav-bar" class="navbar navbar-default navbar-static-top">
+<nav id="nav-bar" class="navbar navbar-default navbar-static-topcollapse navbar-collapse myNavbar">
      <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -114,7 +114,6 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
                <li><a href="#about">About</a></li>
                <li><a href="#projects">Projects</a></li>
