--- a/index.html
+++ b/index.html
@@ -105,15 +105,16 @@
          color: #22425A;
     }
 </style>
-<nav id="nav-bar" class="navbar navbar-default navbar-static-topcollapse navbar-collapse myNavbar">
+<nav id="nav-bar" class="navbar navbar-default navbar-static-top">
      <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
                <li><a href="#about">About</a></li>
                <li><a href="#projects">Projects</a></li>
@@ -269,5 +270,6 @@ Steam Page for DesktopDungeons</a>
           </div>
      </div>
 </div>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
