Small edits to readme and showing video to version one

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ Check it out on GitHub</a>
                                    </ul>
                                    <a href="https://github.com/CZMoodyDev/DesktopDungeonBot" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>
 Check it out on GitHub</a><br>
+                                   <a href="https://www.youtube.com/watch?v=04jKrCTWsSQ" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>
+Watch v1.0 in action</a><br>
                                    <a href="http://store.steampowered.com/app/226620/Desktop_Dungeons/" target="_blank"><i class="fa fa-steam-square" aria-hidden="true"></i>
 Steam Page for DesktopDungeons</a>
                               </div>
