Added license, projects and made edits

--- a/index.html
+++ b/index.html
@@ -9,104 +9,7 @@
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Varela+Round" />
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link href="./css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<style>
-    body { 
-         background-color: #7D939C;
-         font-family: Varela Round;
-         font-size: 16px;
-    }
-
-    #headshot {
-         border-radius: 50%;
-         border-width: 3px;
-         border-color: #22425A;
-         border-style: solid;
-    }
-
-    .jumbotron {
-         background-color: #cfd7e5;
-    }
-
-    .jumbotron .name {
-         margin-bottom: 5px;
-         font-size: 40px;
-         color: #22425A;
-    }
-
-    .jumbotron .title {
-         margin-top: 0px;
-         font-size: 25px;
-         color: #22425A;    
-    }
-
-    .profile {
-         margin-bottom: 0px;
-    }
-
-    .main-wrapper {
-         padding-top: 30px;
-    }
-
-    .social-list {
-         color: #22425A;
-    }
-
-    .info-block {
-        background-color: #cfd7e5;
-        padding: 30px;
-        margin-bottom: 15px;
-        color: #22425A;
-    }
-
-    .opac-hover {
-        display: inline-block;
-
-    }
-    .opac-hover img:hover {
-        opacity: .5;
-    }
-
-    .project-flush {
-         margin-top: 0px;
-    }
-
-    #nav-bar {
-         background-color: #8da8b5;
-    }
-    #nav-bar ul li a {
-         color: #22425A;
-    }
-    #nav-bar {
-         margin-bottom: 0px;
-    }
-
-    .info-block .title {
-         margin-top: 0px;
-         font-weight: 800;
-    }
-
-    .project-name {
-         font-weight: 800;
-    }
-
-    .project {
-         margin-bottom: 10px;
-    }
-
-    .skill-name {
-         margin-bottom: 0px;
-         font-weight: 800;
-    }
-
-    .school-name {
-         font-weight: 800;
-         font-size: 20px;
-    }
-
-    .social-list a {
-         color: #22425A;
-    }
-</style>
+<link href="./css/index.css" rel="stylesheet">
 <nav id="nav-bar" class="navbar navbar-default navbar-static-top">
      <div class="container-fluid">
         <div class="navbar-header">
@@ -188,6 +91,22 @@ Watch v1.0 in action</a><br>
                                    <a href="http://store.steampowered.com/app/226620/Desktop_Dungeons/" target="_blank"><i class="fa fa-steam-square" aria-hidden="true"></i>
 Steam Page for DesktopDungeons</a>
                               </div>
+                         </div>
+                         <div class="row project">
+                              <div class="col-md-4 opac-hover">
+                                   <a href="https://codepen.io/Devbag/pen/gWvVoZ" target="_blank"><img class="img-responsive" src="http://i.imgur.com/H443G1y.png"></a>
+                              </div>
+                              <div class="col-md-8">
+                                   <h3 class="project-flush project-name">Local Weather App</h3>
+                                   <p>It's nice to quickly know the weather, so here is an app that quickly gives the weather based on your geolocation.</p>
+                                   <ul class="list-inline">
+                                        <li><span class="label label-primary">WebApp</span></li>
+                                        <li><span class="label label-primary">Geolocation</span></li>
+                                        <li><span class="label label-primary">Asynchronous</span></li>              
+                                   </ul>
+                                   <a href="https://codepen.io/Devbag/pen/gWvVoZ" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>
+Check it out on Codepen</a>
+                              </div>
                          </div>                         
                     </div>
                     <div id="other-projects" class="info-block">
@@ -209,17 +128,40 @@ Steam Page for DesktopDungeons</a>
                                    <li><span class="label label-primary">Video Imaging</span></li>
                               </ul>
                               <a href="https://github.com/CZMoodyDev/ScreenCaster" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on GitHub</a>                              
-                         </div>                         
+                         </div>  
+                         <div>
+                              <h3 class="project-name">Simon Game</h3>
+                              <p>As part of my Front End Development certification, I made a simple little Simon memory game.</p>
+                              <ul class="list-inline">
+                                   <li><span class="label label-primary">WebApp</span></li>
+                                   <li><span class="label label-primary">Game Development</span></li>
+                              </ul>
+                              <a href="https://codepen.io/Devbag/pen/rwVKMd" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
+                         </div> 
+                         <div>
+                              <h3 class="project-name">TicTacToe</h3>
+                              <p>As part of my Front End Development certification, I made a simple TicTacToe game.</p>
+                              <ul class="list-inline">
+                                   <li><span class="label label-primary">WebApp</span></li>
+                                   <li><span class="label label-primary">Game Development</span></li>
+                              </ul>
+                              <a href="https://codepen.io/Devbag/pen/pwJLjx" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
+                         </div>                          
                     </div>                    
                </div>
           </div>
           <div class="col-md-4 margins">
                <div id="education" class="info-block">
                     <h2 class="title">Education</h2>
-                    <h3 class="school-name">University of British Columbia</h3>
+                    <h3 class="school-name">University of British Columbia (2014 - 2017)</h3>
                     <h4 class="degree-name"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Bachelor of Computer Science</h4>
-                    <h3 class="school-name">Concordia University College of Alberta</h3>
+                    <h3 class="school-name">Concordia University College of Alberta (2010 - 2013)</h3>
                     <h4 class="degree-name"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Bachelor of Arts in English</h4>                    
+               </div>
+               <div id="certifications" class="info-block">
+                    <h2 class="title">Certifications</h2>
+                    <h3 class="school-name">freeCodeCamp</h3>
+                    <h4 class="degree-name"><i class="fa fa-certificate" aria-hidden="true"></i> Front End Development</h4>
                </div>
                <div id="skills" class="info-block">
                     <h2 class="title">Technical Skills</h2>
@@ -269,7 +211,11 @@ Steam Page for DesktopDungeons</a>
                </div>  
                <div id="contact" class="info-block">
                     <h2 class="title">Contact</h2>
-                    <p><i class="fa fa-envelope" aria-hidden="true"></i> chermans@alumni.ubc.ca</p>                   
+                    <p><i class="fa fa-envelope" aria-hidden="true"></i> czmoodydev@gmail.com</p>                   
+               </div>
+               <div id="license" class="info-block">
+                    <h2 class="title">License</h2>
+                    <p>This portfolio theme was inspired by <a href="https://www.linkedin.com/in/xiaoying">Xiaoying Riley's</a> design which can be found <a href="http://themes.3rdwavemedia.com/demo/developer/">here</a> and is licensed under <i class="fa fa-creative-commons" aria-hidden="true"></i> <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a></p>
                </div>
           </div>
      </div>
