--- a/index.html
+++ b/index.html
@@ -153,14 +153,17 @@ Check it out on Codepen</a>
           <div class="col-md-4 margins">
                <div id="education" class="info-block">
                     <h2 class="title">Education</h2>
-                    <h3 class="school-name">University of British Columbia (2014 - 2017)</h3>
+                    <h3 class="school-name">University of British Columbia</h3>
+                    <p>September 2014 - April 2017</p>
                     <h4 class="degree-name"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Bachelor of Computer Science</h4>
-                    <h3 class="school-name">Concordia University College of Alberta (2010 - 2013)</h3>
+                    <h3 class="school-name">Concordia University College of Alberta</h3>
+                    <p>September 2010 - April 2013</p>
                     <h4 class="degree-name"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Bachelor of Arts in English</h4>                    
                </div>
                <div id="certifications" class="info-block">
                     <h2 class="title">Certifications</h2>
                     <h3 class="school-name">freeCodeCamp</h3>
+                    <p>June 2017</p>
                     <h4 class="degree-name"><i class="fa fa-certificate" aria-hidden="true"></i> Front End Development</h4>
                </div>
                <div id="skills" class="info-block">
