Added react experience

--- a/index.html
+++ b/index.html
@@ -128,7 +128,15 @@ Check it out on Codepen</a>
                                    <li><span class="label label-primary">Video Imaging</span></li>
                               </ul>
                               <a href="https://github.com/CZMoodyDev/ScreenCaster" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on GitHub</a>                              
-                         </div>  
+                         </div>
+                         <div>
+                              <h3 class="project-name">Markdown Previewer</h3>
+                              <p>I am working toward obtaining freeCodeCamp's Full Stack certification. This is a project I made using React.js</p>
+                              <ul class="list-inline">
+                                   <li><span class="label label-primary">React.js</span></li>
+                              </ul>
+                              <a href="https://codepen.io/Devbag/pen/rwYBOe" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
+                         </div>                         
                          <div>
                               <h3 class="project-name">Simon Game</h3>
                               <p>As part of my Front End Development certification, I made a simple little Simon memory game.</p>
@@ -169,13 +177,6 @@ Check it out on Codepen</a>
                <div id="skills" class="info-block">
                     <h2 class="title">Technical Skills</h2>
                     <p class="skill-info">Here are some of my main skills. Many languages transfer decently between each other (like Java and C#), so it would be silly to make an exhaustive list.</p>
-                    <h4 class="skill-name">PHP</h4>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
-                      aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                        Proficient
-                      </div>
-                    </div>
                     <h4 class="skill-name">HTML/CSS</h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
@@ -190,6 +191,20 @@ Check it out on Codepen</a>
                         Proficient
                       </div>
                     </div>
+                    <h4 class="skill-name">React.js</h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                        Novice
+                      </div>
+                    </div>                    
+                    <h4 class="skill-name">PHP</h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                        Proficient
+                      </div>
+                    </div>                    
                     <h4 class="skill-name">Python</h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
@@ -204,13 +219,6 @@ Check it out on Codepen</a>
                         Proficient
                       </div>
                     </div>
-                    <h4 class="skill-name">C/C++</h4>
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
-                      aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                        Intermediate
-                      </div>
-                    </div>   
                </div>  
                <div id="contact" class="info-block">
                     <h2 class="title">Contact</h2>
@@ -218,7 +226,7 @@ Check it out on Codepen</a>
                </div>
                <div id="license" class="info-block">
                     <h2 class="title">License</h2>
-                    <p>This portfolio theme was inspired by <a href="https://www.linkedin.com/in/xiaoying">Xiaoying Riley's</a> design which can be found <a href="http://themes.3rdwavemedia.com/demo/developer/">here</a> and is licensed under <i class="fa fa-creative-commons" aria-hidden="true"></i> <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a></p>
+                    <p>This portfolio theme was inspired by <a href="https://www.linkedin.com/in/xiaoying">Xiaoying Riley's</a> design which can be found <a href="http://themes.3rdwavemedia.com/demo/developer/">here</a> and is licensed under <i class="fa fa-creative-commons" aria-hidden="true"></i> <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a>. No code was copied.</p>
                </div>
           </div>
      </div>
