--- a/index.html
+++ b/index.html
@@ -193,11 +193,25 @@ Check it out on Codepen</a>
                     </div>
                     <h4 class="skill-name">React.js</h4>
                     <div class="progress">
-                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
-                      aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                        Novice
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+                      aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                        Experienced
+                      </div>
+                    </div>
+                    <h4 class="skill-name">Node.js</h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
+                      aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                        Experienced
                       </div>
                     </div>                    
+                    <h4 class="skill-name">SQL</h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                        Proficient
+                      </div>
+                    </div>                     
                     <h4 class="skill-name">PHP</h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75"
