--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@ Check it out on Codepen</a>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
                       aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                        Experienced
+                        Intermediate
                       </div>
                     </div>
                     <h4 class="skill-name">Node.js</h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60"
                       aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                        Experienced
+                        Intermediate
                       </div>
                     </div>                    
                     <h4 class="skill-name">SQL</h4>
