Added latest project

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@ Check it out on Codepen</a>
                     <div id="other-projects" class="info-block">
                          <h2 class="title">Other Projects</h2>
                          <div>
+                              <h3 class="project-name">freeCodeCamp Leaderboard</h3>
+                              <p>I am working toward obtaining freeCodeCamp's Full Stack certification. This is a project I made using React.js</p>
+                              <ul class="list-inline">
+                                   <li><span class="label label-primary">WebApp</span></li>
+                                   <li><span class="label label-primary">React.js</span></li>
+                              </ul>
+                              <a href="https://codepen.io/Devbag/pen/pwJLjx" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
+                         </div> 
+                         <div>
                               <h3 class="project-name">OpenDental Business Reporting Module</h3>
                               <p>I worked in a team with 6 other students to create a reporting module for the business side of dental practices including patient absence metrics and appointment data.</p>
                               <ul class="list-inline">
@@ -133,6 +142,7 @@ Check it out on Codepen</a>
                               <h3 class="project-name">Markdown Previewer</h3>
                               <p>I am working toward obtaining freeCodeCamp's Full Stack certification. This is a project I made using React.js</p>
                               <ul class="list-inline">
+                                   <li><span class="label label-primary">WebApp</span></li>
                                    <li><span class="label label-primary">React.js</span></li>
                               </ul>
                               <a href="https://codepen.io/Devbag/pen/rwYBOe" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
