--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
                                    <a href="https://github.com/CZMoodyDev/Meal-Planner" target="_blank"><img class="img-responsive" src="https://i.imgur.com/6VGs047.jpg"></a>
                               </div>
                               <div class="col-md-8">
-                                   <h3 class="project-flush project-name">Meal-Planner</h3>
-                                   <p>Using Meal-Planner, I can create shopping lists and instruction sheets for preparing as many frozen slow-cooker meals as I want. Built in HTML/CSS/Vanilla-JS and PHP, I host this project on my local machine along with my MySQL database.</p>
+                                   <h3 class="project-flush project-name">react-meal-planner</h3>
+                                   <p>Using Meal-Planner, I can create shopping lists and instruction sheets for preparing as many frozen slow-cooker meals as I want. Built in React.js and Node.js, I host this project on my local machine along with my MySQL database.</p>
                                    <ul class="list-inline">
                                         <li><span class="label label-primary">WebApp</span></li>
                                         <li><span class="label label-primary">Full Stack</span></li>
+                                        <li><span class="label label-primary">React.js</span></li>
+                                        <li><span class="label label-primary">Node.js</span></li>                                        
                                    </ul>
-                                   <a href="https://github.com/CZMoodyDev/Meal-Planner" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>
+                                   <a href="https://github.com/CZMoodyDev/react-meal-planner" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i>
 Check it out on GitHub</a>
                               </div>
                          </div>
@@ -111,6 +113,16 @@ Check it out on Codepen</a>
                     </div>
                     <div id="other-projects" class="info-block">
                          <h2 class="title">Other Projects</h2>
+                         <div>
+                              <h3 class="project-name">Meal-Planner</h3>
+                              <p>The retired version of my Meal-Planner WebApp.</p>
+                              <ul class="list-inline">
+                                   <li><span class="label label-primary">WebApp</span></li>
+                                   <li><span class="label label-primary">Full Stack</span></li>                                   
+                                   <li><span class="label label-primary">PHP</span></li>                                
+                              </ul>
+                              <a href="https://github.com/CZMoodyDev/react-meal-planner" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Github</a>                              
+                         </div>                          
                          <div>
                               <h3 class="project-name">freeCodeCamp Leaderboard</h3>
                               <p>I am working toward obtaining freeCodeCamp's Full Stack certification. This is a project I made using React.js</p>
