--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                <li><a href="#education">Education</a></li>
                <li><a href="#skills">Skills</a></li>
                <li><a href="#contact">Contact</a></li> 
+               <li><a href="./KimonoApp">KimonoApp</a></li>
           </ul>
         </div>
      </div>
