--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -59,6 +59,22 @@
         </div>
       </div>
     </div>
+    <div class="modal fade" id="ObiModal" role="dialog">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Oh no!</h4>
+          </div>
+          <div class="modal-body">
+            <p id="season-alert"></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
