--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -75,6 +75,42 @@
       </div>
     </div>
   </div>
+  
+  <div class="modal fade" id="PatternModal" role="dialog">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Oh no!</h4>
+        </div>
+        <div class="modal-body">
+          <p id="pattern-alert"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="DetailModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <img class="modal-img"></img><h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+              <p id="pattern-detail"></p>
+            </div>
+            <div class="modal-footer">
+              <button id="ChooseBtn" type="button" class="btn btn-primary" data-dismiss="modal">Choose</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
