--- a/KimonoApp/material.html
+++ b/KimonoApp/material.html
@@ -31,7 +31,7 @@
            </div>
         </div>
    </nav>
-  <body class="text-center">
+  <body class="text-center DressingRoom">
     <h1>Material</h1> <!-- TODO Tooltip Descriptor for Materials -->
     <div id="material-container">
         <button id="Awase" class="btn material" data-toggle="popover" data-trigger="hover" title="Awase" data-content="It's totally a fabric.">Awase</button>
