--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -32,7 +32,7 @@
            </div>
         </div>
    </nav>
-  <body class="text-center">
+  <body class="text-center DressingRoom">
     <div id="dressing-studio-container" class="row row-eq-height">
       <div id="dressing-room-panel" class="col-sm-6">
           <canvas id="DressingRoom" width="657" height="850"></canvas>
