--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -31,7 +31,7 @@
            </div>
         </div>
    </nav>
-  <body class="text-center">
+  <body class="text-center DressingRoom">
     <div id="dressing-room-studio" class="container">
       <div class="row row-eq-height">
         <div id="room-panel" class="col-sm-6">
