--- a/KimonoApp/snippets/scenario-nav.html
+++ b/KimonoApp/snippets/scenario-nav.html
@@ -1,8 +1,8 @@
 <ul class="nav navbar-nav navbar-right">
-    <li><a id="SeasonNav" class="current">Season</a></li>
-    <li><a id="FormalityNav" class="locked">Formality</a></li>
-    <li><a id="MaritalNav" class="locked">Marital Status</a></li>
-    <li><a id="MaterialNav" class="locked">Material</a></li>
-    <li><a id="ObiNav" class="locked">Obi</a></li>
-    <li><a id="PatternNav" class="locked">Pattern</a></li> 
+    <li><a id="SeasonNav" class="current">SEASON</a></li>
+    <li><a id="FormalityNav" class="locked">FORMALITY</a></li>
+    <li><a id="MaritalNav" class="locked">MARITAL STATUS</a></li>
+    <li><a id="MaterialNav" class="locked">MATERIAL</a></li>
+    <li><a id="ObiNav" class="locked">OBI</a></li>
+    <li><a id="PatternNav" class="locked">PATTERN</a></li> 
 </ul>
