--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Kimono Play</title>
 
@@ -66,9 +66,11 @@
         </div>
     </div>
 
-    <div class="row row-eq-height buttons">
-        <img class="btn-arrow" src="Images/General/arrow_left.png" disabled />
-        <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onclick="ForwardTo('formality.html', 'Formality');" disabled />
+    <div class="nav-btns container-fluid">
+        <div class="row row-eq-height buttons">
+            <img class="btn-arrow" src="Images/General/arrow_left.png" disabled />
+            <img class="next-btn btn-arrow" src="Images/General/arrow_right.png" onclick="ForwardTo('formality.html', 'Formality');" disabled />
+        </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
